# hanou-career

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  ranked.json
assets/: read-state.js  style.css
data/: candidate.yaml  master_cv.yaml  search_manual.jsonl  zeugnis_extract.yaml
jobs/agaplesion-diakonieklinikum-rotenburg-gemeinnuetzige-gmbh-as-jsonl-agaplesion-jobs-extract-763f9b41fe/: gaps.md  job.json  notes.html
jobs/agaplesion-diakonieklinikum-rotenburg-gemeinnuetzige-gmbh-as-live-0fc74da2d9/: gaps.md  job.json  notes.html
jobs/agaplesion-ev-klinikum-schaumburg-ggmbh-assistenzarzt-aerzti-jsonl-agaplesion-jobs-extract-75c2a0bd9e/: gaps.md  job.json  notes.html
jobs/agaplesion-ev-klinikum-schaumburg-ggmbh-assistenzarzt-bzw-fa-live-a5602b94f5/: gaps.md  job.json  notes.html
jobs/agaplesion-ev-klinikum-schaumburg-ggmbh-assistenzarzt-frauen-live-93466aa5e5/: gaps.md  job.json  notes.html
jobs/diakovere-annastift-klinik-ziel-klinikradar-diakovere-annast-klinikradar-229/: gaps.md  job.json  notes.html
jobs/diakovere-friederikenstift-humboldtstrasse-klinik-ziel-klini-klinikradar-208/: gaps.md  job.json  notes.html
jobs/elbe-klinikum-stade-klinik-ziel-klinikradar-elbe-klinikum-st-klinikradar-276/: gaps.md  job.json  notes.html
jobs/gesundheitszentrum-hannover-klinik-ziel-klinikradar-gesundhe-klinikradar-66/: gaps.md  job.json  notes.html
jobs/herz-gefaesszentrum-am-kh-neu-bethlehem-goettingen-assistenz-458f41cd7f/: gaps.md  job.json  notes.html
src/hanou_career/: __init__.py  cli.py  config.py
tests/: test_rank_and_cv.py
(+63 files in other folders)
