[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanou-career"
version = "0.1.0"
description = "Career coach for Mohamad Fares Hanou: master + tailored CVs, BE-aware job ranking, HTML dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hanou Career" }]
dependencies = [
    "httpx>=0.27",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
hanou-career = "hanou_career.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hanou_career.report" = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
